# xml-structure

./: Cargo.toml  README.md  pyproject.toml
python/xml_structure/: __init__.py
python/xml_structure/preprocess_sfs/: sfs_json.py  sparv_source.py
python/xml_structure/sparv/: xml_source_writer.py
src/: lib.rs
tests/: conftest.py
tests/assets/cks6riksg/: cks6riksg.json
tests/integration/: build_sfs_source_integration_test.py
